[tool.poetry]
package-mode = false
name = "cloud-application-project"
version = "0.1.0"
description = "API de pedidos e itens — Projeto base do curso Move Tech"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
scalar-fastapi = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

